[BUGFIX] Fixed path to TCPDF in composer.json

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,6 @@
 		"psr-4": {
 			"Typoheads\\Formhandler\\": "Classes/"
 		},
-		"classmap": ["Resources/tcpdf/tcpdf.php"]
+		"classmap": ["Resources/PHP/tcpdf/tcpdf.php"]
 	}
 }
